# Tex-rs

./: .gitignore  Cargo.toml  simple.aux  simple.fdb_latexmk  simple.fls  test.tex
examples/creating_basic_template/: Cargo.toml
examples/simple_article/: Cargo.toml
examples/simple_article/src/: main.rs
src/: attatch.rs  error.rs  lib.rs
tex-rs/: Cargo.toml  README.md
tex-rs-dummy/: Cargo.toml
tex-rs-dummy/src/: main.rs
tex-rs/src/: element.rs  error.rs  latex.rs  lib.rs
tex-rs/src/traits/: attatch.rs  convert.rs  mod.rs
