[package]
name = "tex-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Library to create latex documents in Rust"
readme = "README.md"
authors = ["Mustafif Khan"]
repository = "http://github.com/MKProj/Tex-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "try"
path = "src/bin/try.rs"

[dependencies]
